# ore-softsensor-drift

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-lock.txt
data/: README.md
scripts/: run_reproduction.py
src/ore_softsensor_drift/: conformal.py  data.py  experiments.py  metrics.py  models.py
tests/: test_core.py
