[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ore-softsensor-drift"
version = "1.0.0"
description = "Reproducible experiments for calibration-drift robustness of ore grinding soft sensors."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Andrii Ablets" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "torch>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
